<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SplashScreen</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="rotate">Rotate</string>
    <string name="title">Enter the Angle</string>
    <string name="remove">Remove</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="browse">browse</string>
    <string name="fbupload">fbimport</string>
    <string name="postcard">postcard</string>
    <string name="companylogo">companylogo</string>
    <string name="epostcard">Send ePostCard</string>
    <string name="start">start</string>
    <string name="tip1">1.Choose or Import Photo from facebook</string>
    <string name="tip2">2. Customize Photo</string>
    <string name="tip3">3.Preview and Add Receipents</string>
    <string name="tip4">4.Buy and Send</string>
    <string name="titleimage">titleimage</string>
    <string name="sendpostcard">Send PostCard</string>
    <string name="photocard">Send PhotoCard</string>
    <string name="why">Why OrangeSoft World Pvt. Ltd. ?</string>
    <string name="contact">Contact Us</string>
    <string name="phone">Contact No.</string>
    <string name="phonebutton">+9107940024403</string>
    <string name="call">Call</string>
    <string name="emailid">Email</string>
    <string name="email_id">info@orangesoftworld.com</string>
    <string name="emailbutton">Email</string>
    <string name="location">Location</string>
    <string name="pickapic">Pick a Pic</string>
    <string name="picfromgallery">Use Exisiting Photo</string>
    <string name="picfromfacebook">Use Facebook Photo</string>
    <string name="customize">Customize Pic</string>
    <string name="edit">Add Text</string>
    <string name="preview">preview</string>
    <string name="delete">delete</string>
</resources>
