<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TableLayout android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
         android:stretchColumns="3" 
         android:shrinkColumns="3">
        <TableRow android:id="@+id/phone" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content">
            <TextView android:id="@+id/contact" 
                android:layout_width="wrap_content"
                 android:layout_height="wrap_content" 
                 android:text="@string/contact" />
            <TextView android:textStyle="bold" 
                android:id="@+id/contactno" 
                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                  android:text="@string/phonebutton" />
            
            <Button android:id="@+id/contactbutton"
                 android:background="@drawable/tooltipshape" 
                 android:layout_width="fill_parent" 
                 android:layout_height="wrap_content"
                  android:text="@string/call" />
        </TableRow>
        <TableRow android:id="@+id/email"
             android:layout_width="fill_parent" 
             android:layout_height="wrap_content">
            <TextView android:id="@+id/emailid"
                 android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                   android:text="@string/emailid" />
            <TextView android:textStyle="bold" 
                android:id="@+id/email_id"
                 android:layout_width="wrap_content" 
                 android:layout_height="wrap_content"
                  android:text="@string/email_id" />
            <Button android:gravity="center"
                 android:id="@+id/emailbutton" 
                 android:background="@drawable/tooltipshape"
                  android:layout_width="fill_parent" 
                  android:layout_height="wrap_content" 
                  android:text="@string/emailbutton" />
        </TableRow>
        <TableRow android:id="@+id/map" 
            android:layout_width="fill_parent"
             android:layout_height="wrap_content">
            
            <TextView android:id="@+id/location"
                 android:layout_width="wrap_content"
                  android:layout_height="wrap_content" 
                  android:text="@string/location" />
            <ImageView android:id="@+id/gmap" 
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content"
                 android:src="@drawable/orangesoft" 
                 android:scaleType="centerCrop" />
        </TableRow>
    </TableLayout>
</RelativeLayout>