<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:background="@drawable/postcard_img" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout  android:gravity="center_vertical"
         android:orientation="horizontal"
         android:id="@+id/titlelayout" 
         android:background="#ffffa500"
         android:paddingLeft="5.0dip" 
         android:layout_width="fill_parent" 
         android:layout_height="35.0dip"
      >
      
        <TextView android:textSize="20.0sp" 
            android:textStyle="bold"
            android:id="@+id/title"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content"
            android:text="@string/epostcard"
            android:layout_centerHorizontal="true" />
        <ImageView android:id="@+id/titleimage" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_toLeftOf="@id/title"
            android:contentDescription="@string/titleimage" />
    </RelativeLayout>
    <Button android:textSize="@dimen/start" 
        android:id="@+id/start" 
        android:background="@drawable/button_shape" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/start" 
        android:layout_alignParentBottom="true" />
    
    <LinearLayout android:id="@+id/tiplayout1" 
        android:background="@drawable/tooltipshape"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="40.0dip" 
        android:layout_below="@id/titlelayout"
        android:layout_alignParentLeft="true">
        <TextView android:textSize="@dimen/tipsize" 
            android:textStyle="bold" 
            android:gravity="top|left|center" 
            android:id="@+id/tooltip1" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/tip1" />
    </LinearLayout>
    <LinearLayout android:id="@+id/tiplayout2" 
        android:background="@drawable/tooltipshape" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="60.0dip" 
        android:layout_below="@id/tiplayout1"
        android:layout_alignParentRight="true">
        
        <TextView android:textSize="@dimen/tipsize"
             android:textStyle="bold" 
             android:gravity="top|right|center"
             android:id="@+id/tooltip2" 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tip2" />
    </LinearLayout>
    <LinearLayout android:id="@+id/tiplayout4" 
        android:background="@drawable/tooltipshape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60.0dip"
        android:layout_above="@id/start"
        android:layout_alignParentRight="true">
        <TextView android:textSize="@dimen/tipsize" 
             android:textStyle="bold" 
             android:gravity="top|right|center"
             android:id="@+id/tooltip4" 
             android:layout_width="wrap_content" 
             android:layout_height="wrap_content" 
             android:text="@string/tip4" />
    </LinearLayout>
    
    <LinearLayout android:id="@+id/tiplayout3" 
        android:background="@drawable/tooltipshape" 
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content" 
        android:layout_marginBottom="50.0dip"
         android:layout_above="@id/tiplayout4" 
         android:layout_alignParentLeft="true">
        
        <TextView android:textSize="@dimen/tipsize"
             android:textStyle="bold" 
             android:gravity="top|left|center" 
             android:id="@+id/tooltip3" 
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/tip3" />
    </LinearLayout>
</RelativeLayout>