<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:textSize="@dimen/start"
         android:id="@+id/postcard"
          android:background="@drawable/button_shape"
           android:layout_width="fill_parent" 
           android:layout_height="wrap_content"
            android:layout_marginTop="1.0dip" 
            android:text="@string/sendpostcard" />
    <Button android:textSize="@dimen/start"
         android:id="@+id/photocard" 
         android:background="@drawable/button_shape"
          android:layout_width="fill_parent" 
          android:layout_height="wrap_content" 
          android:layout_marginTop="20.0dip" 
          android:text="@string/photocard" 
          android:layout_below="@id/postcard" />
    
    <TextView android:textStyle="bold"
         android:id="@+id/why" 
         android:background="#ffffa500" 
         android:layout_width="fill_parent"
          android:layout_height="wrap_content"
           android:layout_marginTop="20.0dip" 
           android:text="@string/why" 
           android:layout_below="@id/photocard" />
 
  <TextView android:id="@+id/whyus"
         android:layout_width="fill_parent"
          android:layout_height="wrap_content"
           android:maxLines="5" />
  
  <LinearLayout android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_alignParentBottom="true">
        
        <include layout="@layout/contact" />
    </LinearLayout>
</RelativeLayout>