<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:gravity="center_vertical" 
        android:orientation="horizontal"
         android:id="@+id/pictitle" 
         android:background="#ffffa500"
          android:paddingLeft="5.0dip"
           android:layout_width="fill_parent"
            android:layout_height="45.0dip"
   >
      
        <TextView android:textSize="20.0sp" 
            android:textStyle="bold" 
            android:id="@+id/title" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:text="@string/pickapic"
             android:layout_centerHorizontal="true" />
        
        <ImageView android:id="@+id/titleimage" 
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_toLeftOf="@id/title" />
    </RelativeLayout>
    <Button android:textSize="@dimen/start" 
        android:id="@+id/gallerybutton" 
        android:background="@drawable/button_shape" 
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_marginTop="100.0dip" 
        android:text="@string/picfromgallery" 
        android:layout_below="@id/pictitle" />
    <Button android:textSize="@dimen/start" 
        android:id="@+id/facebookbutton" 
        android:background="@drawable/button_shape"
         android:layout_width="fill_parent" 
         android:layout_height="wrap_content" 
         android:layout_marginTop="60.0dip" 
         android:text="@string/picfromfacebook"
          android:layout_below="@id/gallerybutton" />
</RelativeLayout>